--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -7,11 +7,12 @@ RewriteBase /
 RewriteCond %{HTTP_HOST} ^brad\.touesnard\.com$ [NC]
 RewriteRule ^(.*)$ http://bradt.ca/$1 [R=301,L]
 RewriteRule ^p/([0-9]+)/? /?p=$1 [L,R=301]
-RewriteRule ^documents/resume/? /resume/ [L,R=301]
-RewriteRule ^content/([A-Za-z0-9_-]+)(\.gif|\.jpg|\.png|\.mp3|\.txt|\.wav) /content/uploads/0000/$1$2 [L,R=301]
-RewriteRule ^archives/category/(.*) /category/$1 [L,R=301]
-RewriteRule ^archives/tag/(.*) /tag/$1 [L,R=301]
+RewriteRule ^(documents/)?resume/? http://www.linkedin.com/in/bradt [L,R=301]
+RewriteRule ^(wp/wp-)?content/([A-Za-z0-9_-]+)(\.gif|\.jpg|\.png|\.mp3|\.txt|\.wav) /content/uploads/0000/$2$3 [L,R=301,NC]
 RewriteRule ^archives/[0-9]+/[0-9]+/[0-9]+/([0-9]+)/ /?p=$1 [L,R=301]
+RewriteRule ^archives/(.*) /blog/$1 [L,R=301]
+RewriteRule ^projects/.* /wordpress/ [L,R=301]
+RewriteRule ^category/travel/? /journal/ [L,R=301]
 </IfModule>
 
 # BEGIN WordPress
