--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "public_html/wp"]
 	path = public_html/wp
 	url = git://github.com/WordPress/WordPress.git
+[submodule "public_html/content/plugins/amazon-s3-and-cloudfront"]
+	path = public_html/content/plugins/amazon-s3-and-cloudfront
+	url = git@github.com:bradt/wp-tantan-s3.git
