--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "public_html/content/plugins/wp-app-store"]
 	path = public_html/content/plugins/wp-app-store
 	url = git@github.com:wpappstore/wp-app-store.git
+[submodule "public_html/content/plugins/better-wp-varnish"]
+	path = public_html/content/plugins/better-wp-varnish
+	url = git@github.com:bradt/Better-WP-Varnish.git
