--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ public_html/content/plugins/debug-bar-cron/
 public_html/content/plugins/developer/
 public_html/content/plugins/log-deprecated-notices/
 public_html/content/plugins/rewrite-rules-inspector/
+public_html/content/plugins/wp-migrate-db-pro-tweaks/
 public_html/content/themes/bradtca/assets/.sass-cache/
