--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -20,8 +20,10 @@ RewriteRule ^category/travel/? /journal/ [L,R=301]
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
+RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
+
 # END WordPress
