--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ _archive
 tmp
 public_html/content/uploads
 public_html/content/object-cache.php
+public_html/content/debug.log
 public_html/content/plugins/last.fm/cache
 public_html/content/plugins/debug-bar/
 public_html/content/plugins/debug-bar-cron/
