Adding grunt support.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ public_html/content/plugins/log-deprecated-notices/
 public_html/content/plugins/rewrite-rules-inspector/
 public_html/content/plugins/wp-migrate-db-pro-tweaks/
 public_html/content/themes/bradtca/assets/.sass-cache/
+public_html/content/themes/bradtca/assets/node_modules
