Cleanup wp-config.php

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 _archive
 tmp
 public_html/wp
+public_html/live-config.php
+public_html/local-config.php
 public_html/content/uploads
 public_html/content/object-cache.php
 public_html/content/debug.log
