--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ public_html/content/plugins/rewrite-rules-inspector/
 public_html/content/plugins/wp-migrate-db-pro-tweaks/
 public_html/content/themes/bradtca/assets/.sass-cache/
 public_html/content/themes/bradtca/assets/node_modules
+public_html/content/plugins/grunt-livereload
