--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ public_html/content/themes/bradtca/assets/.sass-cache/
 public_html/content/themes/bradtca/assets/node_modules
 public_html/content/mu-plugins/allow-unsafe-urls.php
 public_html/content/mu-plugins/custom-debug-log-path.php
-
+public_html/content/mu-plugins/wp-migrate-db-pro-compatibility.php
