--- a/public_html/content/themes/bradtca/assets/package.json
+++ b/public_html/content/themes/bradtca/assets/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "deliciousbrains",
-  "version": "0.1.0",
-  "devDependencies": {
-    "grunt": "^0.4.4",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.0",
-    "grunt-contrib-compass": "^0.7.2"
-  }
+  "name": "assets",
+  "version": "1.0.0",
+  "description": "",
+  "main": "Gruntfile.js",
+  "dependencies": {
+    "grunt": "^1.3.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
